added index management
